# leap-stc.github.io

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CNAME  LEAP_Pangeo_architecture.html  LEAP_Pangeo_implementation.html  README.md  code_policy.html  contact.html  data_policy.html  environment.yml  genindex.html  how_to_cite.html  index.html  infrastructure_policy.html  intro.html  markdown.html  mkdocs.yml  notebooks.html  objects.inv  pyproject.toml  references.html  requirements.txt  search.html  searchindex.js  sitemap.xml  support.html
_sources/: intro.md  support.rst
book/: LEAP_Pangeo_architecture.md  LEAP_Pangeo_implementation.md  _config.yml  _toc.yml  contact.md  dummy.txt  how_to_cite.md  intro.md  references.bib  support.rst  team_docs.md
compute/: index.html
data/: index.html  people.yaml
docs/: index.md
edu/: index.html
explanation/: architecture.html  code_policy.html  data_policy.html  implementation.html  infrastructure_policy.html
guides/: bootcamp.html  bootcamp_guide.html  code_guide.html  compute_guide.html  data_guide.html  education.html  education_guide.html  faq.html  hub_guides.html  team_docs.html  team_guide.html  vm_access.html  vscode_remoteSSH_guide.html
introduction/: index.html
leap-pangeo/: architecture.html  implementation.html  jupyterhub.html  solutions.html  tutorial.html
policies/: code_policy.html  data_policy.html  infrastructure_policy.html  users_roles.html
reference/: education.html  index.html  infrastructure.html  membership.html
search/: search_index.json
tutorials/: bootcamp_guide.html  (+3 more)
(+1005 files in other folders)
